--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<div style="background-color:red; width:400px; height:400px;"><h2>This is a test</h2></div>
 </body>
 </html>
