--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<div style="background-color:red; width:400px; height:400px;"><h2>This is a test</h2></div>
+<div style="background-color:red; height:800px;"><h2>This is a test</h2></div>
+<div style="background-color:yellow; height:800px;"><h2>This is a test</h2></div>
+<div style="background-color:blue; height:800px;"><h2>This is a test</h2></div>
+<div style="background-color:green; height:800px;"><h2>This is a test</h2></div>
+<div style="background-color:teal; height:800px;"><h2>This is a test</h2></div>
+<div style="background-color:tan; height:800px;"><h2>This is a test</h2></div>
 </body>
 </html>
