--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="fullpage.css" />
+<script type="text/javascript" src="fullpage.js"></script>
 <html>
 <body>
 <h1>Hello World</h1>
