--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<div style="background-color:red; height:1200px;"><h2>This is a test</h2></div>
-<div style="background-color:brown; height:1200px;"><h2>This is a test</h2></div>
-<div style="background-color:blue; height:1200px;"><h2>This is a test</h2></div>
-<div style="background-color:green; height:1200px;"><h2>This is a test</h2></div>
-<div style="background-color:teal; height:1200px;"><h2>This is a test</h2></div>
-<div style="background-color:tan; height:1200px;"><h2>This is a test</h2></div>
+<div id="fullpage">
+  <div  class="section" style="background-color:red; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" style="background-color:brown; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" style="background-color:blue; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" style="background-color:green; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" style="background-color:teal; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" style="background-color:tan; height:1200px;"><h2>This is a test</h2></div>
+</div>
 </body>
 </html>
