--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 
 	//methods
 	$.fn.fullpage.setAllowScrolling(false);
+	  
 });
+	
+	new fullpage('#fullpage', {
+	//options here
+	autoScrolling:true,
+	scrollHorizontally: true
+});
+
+//methods
+fullpage_api.setAllowScrolling(false);
   
   </script>
 <body>
