--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ $(document).ready(function(){
 
 $(window).scroll(function(){
 
-    window.location = $('div').next();
+    window.location = $('div.section').next();
 
 });
 
@@ -20,9 +20,9 @@ $(window).scroll(function(){
 </script>
 </head>
 <body>
-<h1>Hello World1</h1>
+<h1>Hello World2</h1>
 <p>I'm hosted with GitHub Pages.</p>
-
+<div>
 	<p>If you click on me, I will disappear.</p>
 <p>Click me away!</p>
 <p>Click me too!</p>
@@ -33,6 +33,6 @@ $(window).scroll(function(){
   <div  class="section" style="background-color:teal; height:1200px;"><h2>This is a test</h2></div>
   <div  class="section" style="background-color:tan; height:1200px;"><h2>This is a test</h2></div>
 	
-
+	</div>
 </body>
 </html>
