--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ $(document).ready(function(){
 
 $(window).scroll(function(){
 
-    window.location = $('div.section').next();
+    currentElement = currentElement.next();
+    scrollTo(currentElement); 
 
 });
 
