--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
 <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 </head>
 <body>
-<h1>Hello World4</h1>
+<h1>Hello World5</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<div id="app">
-    <full-page :options="options" id="fullpage" ref="fullpage">
-	<p>If you click on me, I will disappear.</p>
-<p>Click me away!</p>
-<p>Click me too!</p>
+<div id="fullpage">
   <div  class="section" style="background-color:red; height:1200px;"><h2>This is a test</h2></div>
   <div  class="section" style="background-color:brown; height:1200px;"><h2>This is a test</h2></div>
   <div  class="section" style="background-color:blue; height:1200px;"><h2>This is a test</h2></div>
