--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+<link rel="stylesheet" type="text/css" href="fullPage.css" />
 </head>
 <body>
+	<div class="menu" style="background-color:grey; height:1200px; position:absolute; top:0px;">
+	this is a menu
+	</div>
 <h1>Hello World5</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <div id="fullpage">
@@ -17,6 +20,6 @@
 	
 	</div>
 </body>
-	<script type="text/javascript" src="http://expansionscollective.com/testscripts/jquery.fullPage.js"></script>
+	<script type="text/javascript" src="fullPage.js"></script>
 <script> $(document).ready(function() { $('#fullpage').fullpage(); });</script>
 </html>
