--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://github.com/bbreindel/bbreindel.github.io/blob/master/fullPage.css" />
+<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/fullPage.css" />
 </head>
 <body>
 	<div class="menu" style="background-color:grey; height:50px; position:absolute; top:0px;">
@@ -21,6 +21,6 @@
 	
 	</div>
 </body>
-	<script type="text/javascript" src="https://github.com/bbreindel/bbreindel.github.io/blob/master/fullpage.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/fullpage.js"></script>
 <script> $(document).ready(function() { $('#fullpage').fullpage(); });</script>
 </html>
