--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/fullPage.css" />
 </head>
 <body>
-	<div class="menu" style="background-color:grey; height:50px; position:absolute; top:0px;">
+	<div class="menu" style="background-color:grey; width:100%; height:50px; position:fixed; top:0px;">
 	this is a menu
 	</div>
 <h1>Hello World5</h1>
