--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	
 	</div>
 </body>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 	<script type="text/javascript" src="http://www.williambreindel.com/fullpage.js"></script>
 <script> 
 	$(document).ready(function() {
