--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/fullPage.css" />
+<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/fullpage.css" />
 </head>
 <body>
 	<div class="menu" style="background-color:grey; width:100%; height:50px; position:fixed; top:0px;">
