--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/fullpage.css" />
+<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
 </head>
 <body>
 	<div class="menu" style="background-color:grey; width:100%; height:50px; position:fixed; top:0px;">
@@ -21,8 +21,11 @@
 	
 	</div>
 </body>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script type="text/javascript" src="http://www.williambreindel.com/fullpage.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/jquery.min.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/jquery.easing.min.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/jquery.slimscroll.min.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/jquery.fullPage.min.js"></script>
+	<script type="text/javascript" src="http://www.williambreindel.com/webflow.055c1ac13.js"></script>
 <script> 
 	$(document).ready(function() {
 		$('#fullpage').fullpage({
