--- a/index.html
+++ b/index.html
@@ -26,14 +26,46 @@
 	<script type="text/javascript" src="http://www.williambreindel.com/jquery.slimscroll.min.js"></script>
 	<script type="text/javascript" src="http://www.williambreindel.com/jquery.fullPage.min.js"></script>
 	<script type="text/javascript" src="http://www.williambreindel.com/webflow.055c1ac13.js"></script>
-<script> 
-	$(document).ready(function() {
-		$('#fullpage').fullpage({
-		//options here
-		autoScrolling:true,
-		scrollHorizontally: true
-	});
-		$.fn.fullpage.setAllowScrolling(false);
-	});
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#fullpage').fullpage({
+        verticalCentered: true,
+        resize : true,
+        sectionsColor : ['#ccc', '#fff'],
+        anchors:['firstSlide', 'secondSlide'],
+        scrollingSpeed: 700,
+        easing: 'easeInOutCubic',
+        menu: false,
+        navigation: true,
+        navigationPosition: 'right',
+        navigationTooltips: ['firstSlide', 'secondSlide'],
+        slidesNavigation: true,
+        slidesNavPosition: 'bottom',
+        loopBottom: false,
+        loopTop: false,
+        loopHorizontal: true,
+        autoScrolling: true,
+        scrollOverflow: true,
+        css3: false,
+        paddingTop: '3em',
+        paddingBottom: '10px',
+        normalScrollElements: '#element1, .element2',
+        normalScrollElementTouchThreshold: 5,
+        keyboardScrolling: true,
+        touchSensitivity: 15,
+        continuousVertical: false,
+        animateAnchor: true,
+        sectionSelector: '.section',
+        slideSelector: '.slide',
+
+        //events
+        onLeave: function(index, nextIndex, direction){},
+        afterLoad: function(anchorLink, index){},
+        afterRender: function(){},
+        afterResize: function(){},
+        afterSlideLoad: function(anchorLink, index, slideAnchor, slideIndex){},
+        onSlideLeave: function(anchorLink, index, slideIndex, direction){}
+    });
+});
 </script>
 </html>
