--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
 </head>
 <body>
-	<div class="menu" style="background-color:grey; width:100%; height:50px; position:fixed; top:0px;">
+	<nav class="menu" role="navigation" style="background-color:grey; width:100%; height:50px; position:relative; top:0px;">
 	this is a menu
-	</div>
+	</nav>
 <div id="fullpage">
   <div  class="section" style="background-color:red; height:1200px;"><h2>This is a test</h2></div>
   <div  class="section" style="background-color:brown; height:1200px;"><h2>This is a test</h2></div>
