--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
 </head>
 <body>
-	<nav class="menu" role="navigation" style="background-color:grey; width:100%; height:50px; position:fixed; top:0px;">
+	<nav class="menu" role="navigation" style="background-color:grey; width:100%; height:50px; position:relative; float:top; text-alignment:center; top:0px;">
 	this is a menu
 	</nav>
 <div id="fullpage">
