--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
+<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
 </head>
 <body>
-	<nav class="menu" role="navigation" style="background-color:grey; width:100%; height:50px; position:relative;">
+	<nav class="topMenu" role="navigation">
 	this is a menu
 	</nav>
 <div id="fullpage">
