--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	this is a menu
 	</nav>
 <div id="fullpage">
-  <div  class="section" style="background-color:red; height:1200px;"><h2>This is a test</h2></div>
-  <div  class="section" style="background-color:brown; height:1200px;"><h2>This is a test</h2></div>
-  <div  class="section" style="background-color:blue; height:1200px;"><h2>This is a test</h2></div>
-  <div  class="section" style="background-color:green; height:1200px;"><h2>This is a test</h2></div>
-  <div  class="section" style="background-color:teal; height:1200px;"><h2>This is a test</h2></div>
-  <div  class="section" style="background-color:tan; height:1200px;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionOne" style="background-color:red;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionTwo" style="background-color:brown;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionThree" style="background-color:blue;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionFour" style="background-color:green;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionFive" style="background-color:teal;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionSix" style="background-color:tan;"><h2>This is a test</h2></div>
 	
 	</div>
 </body>
