--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	this is a menu
 	</nav>
 <div id="fullpage">
-  <div  class="section" id="mainPageSectionOne" style="background-color:red;"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionTwo" style="background-color:brown;"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionThree" style="background-color:blue;"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionFour" style="background-color:green;"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionFive" style="background-color:teal;"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionSix" style="background-color:tan;"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionOne"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionTwo"><h2>This is a test2</h2></div>
+  <div  class="section" id="mainPageSectionThree"><h2>This is a test3</h2></div>
+  <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
+  <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
+  <div  class="section" id="mainPageSectionSix"><h2>This is a test6</h2></div>
 	
 	</div>
 </body>
