--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	this is a menu
 	</nav>
 	<br><br><br><br>
-  <form id="contactForm" action="/message_submit.php"  method="post">
+  <form id="contactForm" action="mailto:williambreindel@gmail.com"  method="post" enctype="text/plain">
   <label for="firstNameFormButton">First Name: </label><br>
   <input class="contactMeFormButton" id="firstNameFormButton"  name="firstNameFormButton" type="text" placeholder="First Name"></input><br>
 	<label for="lastNameFormButton">Last Name: </label><br>
