--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 	<label for="messageTextFormButton">Message: </label><br>
   <input class="contactMeFormButton" id="messageTextFormButton" name="messageTextFormButton" type="textbox"></input><br><br>
   
-  <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit">Press to Contact me!</input>
+  <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input>
   </form>
 
 </body>
