--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
   			<input class="contactMeFormButton" id="firstNameFormButton" name="firstNameFormButton" type="text" placeholder="First Name"></td>
 			  <td style="text-align:center">
   			<input class="contactMeFormButton" id="lastNameFormButton" name="lastNameFormButton" type="text" placeholder="Last Name"></td>
-		  </tr></table>
+		  </tr>
 		  <tr><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
 			<td style="text-align:center"> 
@@ -37,7 +37,7 @@
 	<tr><td style="text-align:center" colspan="2">
   <input class="contactMeFormButton" id="messageTextFormButton" name="messageTextFormButton" type="textbox"></input></td></tr>
   <tr><td style="text-align:center" colspan="2">
-  <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr>
+  <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
   </form>
 
 </body>
