--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
 	<nav class="topMenu" role="navigation">
 	this is a menu
 	</nav>
-	<br><br><br><br>
+	<div id="contactMeTop">Fill out and submit the form below to get in touch with me!</div>
+	<div id="contactMeMid">
   <form id="contactForm" action="http://formspree.io/williambreindel@gmail.com"  method="post" enctype="text/plain">
 	  
 	  
@@ -39,6 +40,7 @@
   <tr><td style="text-align:center" colspan="2">
   <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
   </form>
-
+</div>
+<div id="contactMeFoot">copyright 2020 -  William Breindel</div>		
 </body>
 </html>
