--- a/contact.html
+++ b/contact.html
@@ -18,26 +18,26 @@
 	  
 	  <table>
 		  <tr>
-		  <td style="text-align:center">
+		  <td>
         		<label for="firstNameFormButton">First Name: </label></td>
-		  <td style="text-align:center"><label for="lastNameFormButton">Last Name: </label></td>
+		  <td><label for="lastNameFormButton">Last Name: </label></td>
 		  </tr>
         	  <tr>
-			<td style="text-align:center">
+			<td>
   			<input class="contactMeFormButton" id="firstNameFormButton" name="firstNameFormButton" type="text" placeholder="First Name"></td>
-			  <td style="text-align:center">
+			  <td>
   			<input class="contactMeFormButton" id="lastNameFormButton" name="lastNameFormButton" type="text" placeholder="Last Name"></td>
 		  </tr>
 		  <tr><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
-			<td style="text-align:center"> 
+			<td> 
  			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="email address"></input>
 		  </tr>
-		  <tr><td style="text-align:center" colspan="2">
+		  <tr><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
-	<tr><td style="text-align:center" colspan="2">
+	<tr><td colspan="2">
   <input class="contactMeFormButton" id="messageTextFormButton" name="messageTextFormButton" type="textbox"></input></td></tr>
-  <tr><td style="text-align:center" colspan="2">
+  <tr><td colspan="2">
   <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
   </form>
 </div>
