--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 
@@ -36,7 +36,7 @@
 		  <tr><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
 	<tr><td colspan="2">
-  <input class="contactMeFormButton" id="messageTextFormButton" name="messageTextFormButton" type="textbox"></input></td></tr>
+  <textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
   <tr><td colspan="2">
   <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
   </form>
