--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@ a<!DOCTYPE html>
 		  </tr>
 		  <tr><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
-	<tr><td colspan="2">
-  <textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
-  <tr><td colspan="2">
-  <input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
-  </form>
-</div>
+		<tr id="messageRow"><td colspan="2" >
+  			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
+  		<tr><td colspan="2">
+  			<input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
+ 	 </form>
+	</div>
 <div id="contactMeFoot">copyright 2020 -  William Breindel</div>		
 </body>
 </html>
