--- a/contact.html
+++ b/contact.html
@@ -19,14 +19,16 @@ a<!DOCTYPE html>
 	  <table>
 		  <tr>
 		  <td>
-        		<label for="firstNameFormButton">First Name: </label></td>
-		  <td><label for="lastNameFormButton">Last Name: </label></td>
+        		<label for="nameFormButton">Name: </label></td>
+		  <td>
+			  <input class="contactMeFormButton" id="nameFormButton" name="nameFormButton" type="text" placeholder="Name">
+			  </td>
 		  </tr>
         	  <tr>
 			<td>
-  			<input class="contactMeFormButton" id="firstNameFormButton" name="firstNameFormButton" type="text" placeholder="First Name"></td>
+  			<label for="companyNameFormButton">Company Name: </label></td>
 			  <td>
-  			<input class="contactMeFormButton" id="lastNameFormButton" name="lastNameFormButton" type="text" placeholder="Last Name"></td>
+  			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Last Name"></td>
 		  </tr>
 		  <tr><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
