--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,12 @@ a<!DOCTYPE html>
 			<td> 
  			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="email address"></input>
 		  </tr>
-		  <tr><td colspan="2">
+		  <trid="messageTextFormButton"><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
 		<tr id="messageRow"><td colspan="2" >
   			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
-  		<tr><td colspan="2">
+	 
+	  <tr><td colspan="2">
   			<input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
  	 </form>
 	</div>
