--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@ a<!DOCTYPE html>
 			<td>
   			<label for="companyNameFormButton">Company Name: </label></td>
 			  <td>
-  			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Last Name"></td>
+  			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Company Name"></td>
 		  </tr>
 		  <tr><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
