--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ a<!DOCTYPE html>
 			<td> 
  			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="email address"></input>
 		  </tr>
-		  <tr id="messageTextFormButton"><td colspan="2">
+		  <tr><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
 		<tr id="messageRow"><td colspan="2" >
   			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
