--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 	<nav class="topMenu" role="navigation">
-	this is a menu
+		<a herf="www.williambreindel.com" id="menuHomeLink">Home</a>
+		<a herf="www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
 	</nav>
 	<div id="contactMeTop">Fill out and submit the form below to get in touch with me!</div>
 	<div id="contactMeMid">
