--- a/contact.html
+++ b/contact.html
@@ -18,27 +18,27 @@
 	  
 	  
 	  <table>
-		  <tr id="nonMessageRow">
+		  <tr class="nonMessageRow">
 		  <td>
         		<label for="nameFormButton">Name: </label></td>
 		  <td>
 			  <input class="contactMeFormButton" id="nameFormButton" name="nameFormButton" type="text" placeholder="Name">
 			  </td>
 		  </tr>
-        	  <tr id="nonMessageRow">
+        	  <tr class="nonMessageRow">
 			<td>
   			<label for="companyNameFormButton">Company Name: </label></td>
 			  <td>
   			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Company Name"></td>
 		  </tr>
-		  <tr id="nonMessageRow"><td style="text-align:center">
+		  <tr class="nonMessageRow"><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
 			<td> 
  			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="email address"></input>
 		  </tr>
-		  <tr><td colspan="2">
+		  <tr class="nonMessageRow"><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
-		<tr id="messageRow"><td colspan="2" >
+		<tr class="messageRow"><td colspan="2" >
   			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
 	 
 	  <tr id="nonMessageRow"><td colspan="2">
