--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<nav class="topMenu" role="navigation">
-	this is a menu
+		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
+		<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
 	</nav>
 <div id="fullpage">
   <div  class="section" id="mainPageSectionOne"><h2>This is a test</h2></div>
