--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 	</nav>
 <div id="fullpage">
   <div  class="section" id="mainPageSectionOne"><h2>This is a test</h2></div>
-  <div  class="section" id="mainPageSectionTwo"><img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture"><h2>This is a test2</h2></div>
+  <div  class="section" id="mainPageSectionTwo"><div id="imageDiv">
+	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture"><h2>This is a test2</h2>
+	</div>
+	</div>
   <div  class="section" id="mainPageSectionThree"><h2>This is a test3</h2></div>
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
   <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
