--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 <div id="fullpage">
   <div  class="section" id="mainPageSectionOne"><h2>This is a test</h2></div>
   <div  class="section" id="mainPageSectionTwo"><div id="imageDiv">
-	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture"><h2>This is a test2</h2>
+	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture">
 	</div>
+	  <h2>Insert Bio Here</h2>
 	</div>
-  <div  class="section" id="mainPageSectionThree"><h2>This is a test3</h2></div>
+  <div  class="section" id="mainPageSectionThree">
+	  <div id="section3Top">
+	  </div>
+	  <div id="section3Bottom">
+		  <h2>This is a test3</h2>
+	  </div>
+	  </div>
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
   <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
   <div  class="section" id="mainPageSectionSix"><h2>This is a test6</h2></div>
