--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	  <h2>Insert Bio Here</h2>
 	</div>
   <div  class="section" id="mainPageSectionThree">
-	  <div id="section3Top">
+	  <div id="sectionThreeTop">
 	  </div>
-	  <div id="section3Bottom">
+	  <div id="sectionThreeBottom">
 		  <h2>This is a test3</h2>
 	  </div>
 	  </div>
