--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 		  <tr class="nonMessageRow"><td style="text-align:center">
 			  <label for="emailAddressFormButton" required>Email Address: </label></td>
 			<td> 
- 			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="email address"></input>
+ 			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="Email Address"></input>
 		  </tr>
 		  <tr class="nonMessageRow"><td colspan="2">
 			<label for="messageTextFormButton">Message: </label></td></tr>
@@ -42,7 +42,7 @@
   			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
 	 
 	  <tr id="nonMessageRow"><td colspan="2">
-  			<input class="contactMeFormButton" id="submitButtonFormButton" type ="submit" value="Press to Contact me!"></input></td></tr></table>
+  			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
  	 </form>
 
 <div id="contactMeFoot">copyright 2020 -  William Breindel</div>		
