--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 	<nav class="topMenu" role="navigation">
+		 <div></div>
 		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
 		<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
+		 <div></div>
 	</nav>
 	<div id="contactMeTop">Fill out and submit the form below to get in touch with me!</div>
 
