--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
 </head>
 <body>
+	<div class="container">
+		<div class="cloud"></div>
 	<nav class="topMenu" role="navigation">
 		 <div></div>
 		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
@@ -47,6 +49,7 @@
   			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
  	 </form>
 
-<div id="contactMeFoot">copyright 2020 -  William Breindel</div>		
+<div id="contactMeFoot">copyright 2020 -  William Breindel</div>
+</div>
 </body>
 </html>
