--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 		<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
 	</nav>
 <div id="fullpage">
-  <div  class="section" id="mainPageSectionOne"><h2>This is a test</h2></div>
+  <div  class="section" id="mainPageSectionOne">
+	<div class="container">
+		<div class="cloud">
+		</div>
+	  </div>
+	</div>
   <div  class="section" id="mainPageSectionTwo"><div id="imageDiv">
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture">
 	</div>
