--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		</div>
 	  </div>
 	</div>
-  <div  class="section" id="mainPageSectionTwo"><div id="imageDiv">
+  <div  class="section" id="mainPageSectionTwo">
+	   <h2>Insert Intro Here</h2>
+	  <div id="imageDiv">
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture">
 	</div>
 	  <h2>Insert Bio Here</h2>
