--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<div class="cloud">
 		</div>
-		<div id="frontPageName"><h1>William Breindel</h1><br><h4>Web Developer</h4></div>
+		<div id="frontPageName"><h1 class="frontPageNameH">William Breindel</h1><br><h4 class="frontPageNameH">Web Developer</h4></div>
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
