--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
 		<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
 		 <div></div>
 	</nav>
-	<div id="contactMeTop">Message Sent Successfully!</div>
+		<div id="contactMeTop"><h1 id="successfulMessage">Message Sent Successfully!</h1></div>
 
   <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post" enctype="text/plain">
 	  
