--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="cloud"></div>
+		<div class="cloud">
 	<nav class="topMenu" role="navigation">
 		 <div></div>
 		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
@@ -47,7 +47,7 @@
 	 
 	  <tr id="nonMessageRow"><td colspan="2">
   			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
- 	 </form>
+ 	 </form></div>
 
 <div id="contactMeFoot">copyright 2020 -  William Breindel</div>
 </div>
