--- a/success.html
+++ b/success.html
@@ -18,7 +18,7 @@
 	</nav>
 		<div id="contactMeTop"><h1 id="successfulMessage">Message Sent Successfully!</h1></div>
 
-  <form id="contactForm" action="https://forms.un-static.com/forms/543b64b49519d2f2194edbb46daa5b9fd80c06c8"  method="post" enctype="text/plain">
+  <form id="contactForm" action="https://forms.un-static.com/forms/543b64b49519d2f2194edbb46daa5b9fd80c06c8"  method="post">
 	  
 	  
 	  <table>
