--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="cloud">
+		<div class="cloud" id="contactCloud">
 	<nav class="topMenu" role="navigation">
 		 <div></div>
 		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
