--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="cloud"></div>
+		<div class="cloud"  id="contactCloud">
 	<nav class="topMenu" role="navigation">
 		 <div></div>
 		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
@@ -50,6 +50,7 @@
  	 </form>
 
 <div id="contactMeFoot">copyright 2020 -  William Breindel</div>
+	</div>
 </div>
 </body>
 </html>
