--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
 </head>
 <body>
-	<div class="container">
+	<div class="container" id="contactContainer">
 		<div class="cloud"  id="contactCloud">
 	<nav class="topMenu" role="navigation">
 		 <div></div>
