--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</nav>
 <div id="fullpage">
   <div  class="section" id="mainPageSectionOne">
-	<div class="container">
-		<div class="cloud">
+	<div class="container" id="mainMenuContainer">
+		<div class="cloud" id="mainMenuCloud">
 		</div>
 		<div id="frontPageName"><h1 class="frontPageNameH">William Breindel</h1><br><h4 class="frontPageNameH">Web Developer</h4></div>
 	  </div>
