--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 	</nav>
 	<div id="contactMeTop"></div>
 
-  <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post" enctype="text/plain">
+  <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post">
 	  
 	  
 	  <table>
