--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   <div  class="section" id="mainPageSectionThree">
 	  <div id="sectionThreeTop">
 	  </div>
-	  <div id="sectionThreeBottom">
-		  <h2>This is a test3</h2>
-	  </div>
-	  </div>
+	  <div class="section3Section" id="section3Section1"></div>
+	  <div class="section3Section" id="section3Section2"></div>
+	  <div class="section3Section" id="section3Section3"></div>
+
+
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
   <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
   <div  class="section" id="mainPageSectionSix"><h2>This is a test6</h2></div>
