--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	  <div class="section3Section" id="section3Section1"></div>
 	  <div class="section3Section" id="section3Section2"></div>
 	  <div class="section3Section" id="section3Section3"></div>
-
+</div>
 
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
   <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
