--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
 	  <h2>Insert Bio Here</h2>
 	</div>
   <div  class="section" id="mainPageSectionThree">
-	  <div class="section3Section" id="section3Section1"></div>
+	  <div class="section3Section" id="section3Section1">
+		 <u> <h5>Programming:</h5></u><br><br>
+		  - PHP<br>
+		  - c#?<br>
+	  	- HTML5<br>
+		  - CSS<br>
+		  - Javascript<br>
+		  - JQuery<br>
+	  
+	  
+	  
+	  
+	  </div>
 	  <div class="section3Section" id="section3Section2"></div>
 	  <div class="section3Section" id="section3Section3"></div>
 </div>
