--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
-		 <u> <h5>Programming:</h5></u><br><br>
-		  - PHP<br>
-		  - c#?<br>
-	  	- HTML5<br>
-		  - CSS<br>
-		  - Javascript<br>
-		  - JQuery<br>
-	  
+		<table><tr><td><u> <h5>Programming:</h5></u></td></tr>
+		<tr><td>  - PHP</td></tr>
+		<tr><td>  - c#?</td></tr>
+	  	<tr><td>- HTML5</td></tr>
+		<tr><td>  - CSS</td></tr>
+		<tr><td>  - Javascript</td></tr>
+		<tr><td>  - JQuery</td></tr>
+		  </table>
 	  
 	  
 	  
