--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
+<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 	<nav class="topMenu" role="navigation">
