--- a/success.html
+++ b/success.html
@@ -6,6 +6,7 @@
 <head>
 <title>Contact William Breindel</title>
 <link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
+<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container" id="contactContainer">
