--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
-	   <h2>Insert Intro Here</h2>
+	  <h2>My name is William Breindel</h2><br><h4> I'm a web developer that can provide your site the Zing you are looking for!</h4>
 	  <div id="imageDiv">
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture">
 	</div>
@@ -41,8 +41,25 @@
 	  
 	  
 	  </div>
-	  <div class="section3Section" id="section3Section2"></div>
-	  <div class="section3Section" id="section3Section3"></div>
+	  <div class="section3Section" id="section3Section2"><table><tr><td><u> <h5>Skills:</h5></u></td></tr>
+		<tr><td>-Programming/td></tr>
+		<tr><td>  - Testing</td></tr>
+	  	<tr><td>- Visual Studio</td></tr>
+		<tr><td>  - Quality Control</td></tr>
+		<tr><td>  - project Management</td></tr>
+		<tr><td>  - Requirements Gathering</td></tr>
+		  </div>		
+		  </table>
+	  <div class="section3Section" id="section3Section3">
+	  		<table><tr><td><u> <h5>Programming:</h5></u></td></tr>
+		<tr><td>  - PHP</td></tr>
+		<tr><td>  - c#?</td></tr>
+	  	<tr><td>- HTML5</td></tr>
+		<tr><td>  - CSS</td></tr>
+		<tr><td>  - Javascript</td></tr>
+		<tr><td>  - JQuery</td></tr>
+		  </table>
+	  </div>
 </div>
 
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
