--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
 	  
 	  
 	  </div>
-	  <div class="section3Section" id="section3Section2"><table><tr><td><u> <h5>Skills:</h5></u></td></tr>
+	  <div class="section3Section" id="section3Section2">
+		  <table><tr><td><u> <h5>Skills:</h5></u></td></tr>
 		<tr><td>-Programming/td></tr>
 		<tr><td>  - Testing</td></tr>
 	  	<tr><td>- Visual Studio</td></tr>
 		<tr><td>  - Quality Control</td></tr>
 		<tr><td>  - project Management</td></tr>
 		<tr><td>  - Requirements Gathering</td></tr>
-		  </div>		
-		  </table>
+			  </table>
+		  </div>
 	  <div class="section3Section" id="section3Section3">
 	  		<table><tr><td><u> <h5>Programming:</h5></u></td></tr>
 		<tr><td>  - PHP</td></tr>
