--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
-	  <h2>Hi, my name is William Breindel</h2><br><h4> I'm a web developer that can provide your site the Zing you are looking for!</h4>
+	  <h2>Hi, my name is William Breindel. My friends call me Bill.</h2><br><h4> I'm a full-stack web developer</h4>
 	  <div id="imageDiv">
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/IMG79.jpg" alt="My Picture">
 	</div>
