--- a/index.html
+++ b/index.html
@@ -29,38 +29,68 @@
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
-		<table><tr><td><u> <h5>Programming:</h5></u></td></tr>
+		<table><tr><td><u> <h5>Programming Languages:</h5></u></td></tr>
 		<tr><td>  - PHP</td></tr>
-		<tr><td>  - c#?</td></tr>
-	  	<tr><td>- HTML5</td></tr>
+		<tr><td>  - c#</td></tr>
+	  	<tr><td>  - HTML5</td></tr>
 		<tr><td>  - CSS</td></tr>
 		<tr><td>  - Javascript</td></tr>
 		<tr><td>  - JQuery</td></tr>
+		<tr><td>  - XML</td></tr>
+		<tr><td>  - JSON</td></tr>
 		  </table>
 	  
 	  
 	  
 	  </div>
 	  <div class="section3Section" id="section3Section2">
-		  <table><tr><td><u> <h5>Skills:</h5></u></td></tr>
-		<tr><td>-Programming/td></tr>
+		  <table><tr><td><u> <h5>Additional Skills:</h5></u></td></tr>
+		<tr><td>  - MySQL/td></tr>
+		<tr><td>  - SQLite</td></tr>
+	  	<tr><td>  - Visual Studio</td></tr>
+		<tr><td>  - Linux</td></tr>
+		<tr><td>  - Raspberry Pi Development</td></tr>
+		<tr><td>  - SSH</td></tr>
+		<tr><td>  - Wordpress/Bluehost</td></tr>
+			  </table>
+		  </div>
+	  <div class="section3Section" id="section3Section3">
+	  		<table><tr><td><u> <h5>Projects I've worked on:</h5></u></td></tr>
+		<tr><td>  - Custom Client Relationship Management Site including:</td></tr>
+		<tr><td>
+			<table><tr>
+				<td></td><td>- Ordering</td>
+				</tr>
+				<tr>
+				<td></td><td>- Ticketing/Support</td>
+				</tr>
+				<tr>
+				<td></td><td>- Knowledge Base</td>
+				</tr>
+				<tr>
+				<td></td><td>- Customer Accounts</td>
+				</tr>
+				<tr>
+				<td></td><td>- Reporting/Analytics</td>
+				</tr>
+				<tr>
+				<td></td><td>- FAQ/Troubleshooting Guides</td>
+				</tr>
+			</table>
+		</td></tr>
+		<tr><td>  - Cloud Kiosk Reservation System</td></tr>
+	  	<tr><td>  - Customer Stat Site</td></tr>
+		<tr><td>  - Licensing Website</td></tr>
+		<tr><td>  - Company Website</td></tr>
+		<tr><td>  - Custom Wordpress site development</td></tr>
+		  </table>
+	  </div>
+	  	/*	<tr><td>-Programming/td></tr>
 		<tr><td>  - Testing</td></tr>
 	  	<tr><td>- Visual Studio</td></tr>
 		<tr><td>  - Quality Control</td></tr>
 		<tr><td>  - project Management</td></tr>
-		<tr><td>  - Requirements Gathering</td></tr>
-			  </table>
-		  </div>
-	  <div class="section3Section" id="section3Section3">
-	  		<table><tr><td><u> <h5>Programming:</h5></u></td></tr>
-		<tr><td>  - PHP</td></tr>
-		<tr><td>  - c#?</td></tr>
-	  	<tr><td>- HTML5</td></tr>
-		<tr><td>  - CSS</td></tr>
-		<tr><td>  - Javascript</td></tr>
-		<tr><td>  - JQuery</td></tr>
-		  </table>
-	  </div>
+		<tr><td>  - Requirements Gathering</td></tr> */
 </div>
 
   <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
