--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	  </div>
 	  <div class="section3Section" id="section3Section2">
 		  <table><tr><td><u> <h5>Additional Skills:</h5></u></td></tr>
-		<tr><td>  - MySQL/td></tr>
+		<tr><td>  - MySQL</td></tr>
 		<tr><td>  - SQLite</td></tr>
 	  	<tr><td>  - Visual Studio</td></tr>
 		<tr><td>  - Linux</td></tr>
